See changelog on thunderstore.io

--- a/BodylogExtender/BodylogExtender.csproj
+++ b/BodylogExtender/BodylogExtender.csproj
@@ -43,8 +43,20 @@
       <Reference Include="MelonLoader">
         <HintPath>$(BONELAB_DIR)\MelonLoader\net6\MelonLoader.dll</HintPath>
       </Reference>
+      <Reference Include="Unity.InputSystem">
+        <HintPath>..\..\..\AppData\Roaming\com.kesomannen.gale\bonelab\profiles\Dev\MelonLoader\Il2CppAssemblies\Unity.InputSystem.dll</HintPath>
+      </Reference>
       <Reference Include="UnityEngine.CoreModule">
         <HintPath>$(BONELAB_DIR)\MelonLoader\Il2CppAssemblies\UnityEngine.CoreModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.InputLegacyModule">
+        <HintPath>..\..\..\AppData\Roaming\com.kesomannen.gale\bonelab\profiles\Dev\MelonLoader\Il2CppAssemblies\UnityEngine.InputLegacyModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.InputModule">
+        <HintPath>..\..\..\AppData\Roaming\com.kesomannen.gale\bonelab\profiles\Dev\MelonLoader\Il2CppAssemblies\UnityEngine.InputModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.ParticleSystemModule">
+        <HintPath>..\..\..\AppData\Roaming\com.kesomannen.gale\bonelab\profiles\Dev\MelonLoader\Il2CppAssemblies\UnityEngine.ParticleSystemModule.dll</HintPath>
       </Reference>
     </ItemGroup>
 
